--- a/VaporTrails/plugin.yml
+++ b/VaporTrails/plugin.yml
@@ -1,23 +1,15 @@
-name: VaporTrails
-
-main: com.mitsugaru.VaporTrails.VaporTrails
-
-version: 0.07
-
-website: http://dev.bukkit.org/server-mods/vaportrails/
-
-description: Fun vapor trails.
-
+name: ${project.artifactId}
+description: ${project.description}
+main: ${project.mainclass}
+version: ${project.version}
+website: ${project.website}
 softdepend: [Vault]
-
 authors:
   - Mitsugaru
-
 commands:
   trail:
     description: Root command for VaporTrails
     usage: /trail ? - Show help on VaporTrails
-
 permissions:
     VaporTrails.*:
         description: Gives access to all VaporTrails commands
